<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:id="@+id/horizontal_scroll"
    android:layout_marginStart="16dp"
    android:overScrollMode="never"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radio_group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/jan"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/feb"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/mar"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/apr"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/may"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/jun"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />



    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/jul"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/aug"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/sep"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/oct"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/nov"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radio_btn_bg"
        android:button="@null"
        android:elevation="6dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/dec"
        android:textColor="@drawable/radio_btn_text_bg"
        android:textStyle="bold" />

</RadioGroup>

</HorizontalScrollView>
