<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".page.EmployeeDetailPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oct_2019"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />


        <View
            android:id="@+id/view1"
            android:alpha="0.5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:background="@color/hash"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>

        <LinearLayout
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="75dp">

            <TextView
                android:id="@+id/tv_tot_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_hours"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/tv_tot_present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_present"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <TextView
                android:id="@+id/tv_tot_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_absent"
                android:textSize="12sp" />

        </LinearLayout>


        <View
            android:id="@+id/view2"
            android:alpha="0.5"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:background="@color/hash"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail"
            android:overScrollMode="never"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/row_day"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_nodata"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/no_record_found"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <include layout="@layout/loader"/>




    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>